@@ -1,5 +1,5 @@
 /*
- * This file was automatically generated by make-map from ../../mcs/class/lib/default/Mono.Posix.dll
+ * This file was automatically generated by make-map from ../../mcs/class/lib/default/Mono.Posix.dll.
  *
  * DO NOT MODIFY.
  */
