@@ -1,3 +1,9 @@
+2005-06-05  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* map-icalls.h, map.h: Change header comment so it matches what 
+	  `make refresh` generates.
+	* map.c: Add <sys/xattr.h> header.
+
 2005-05-31  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* sys-mman.c: Add wrappers for mmap, munmap, mprotect, msync, mlock,
